@startuml

title __LOGIN's Class Diagram__\n

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.LoginByCodeFragment {
          {static} - TAG : String
          - handler : Handler
          - preResult : String
          + getCaptcha()
          + login()
          + loginFailed()
          + loginSuccess()
          {static} + newInstance()
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.LoginFragment {
          {static} ~ TAG : String
          - handler : Handler
          + login()
          + loginFailed()
          + loginSuccess()
          {static} + newInstance()
          + onActivityCreated()
          + onCreateView()
          + onStart()
          + setText()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.LoginIndexFragment {
          {static} ~ TAG : String
          {static} + newInstance()
          + onActivityCreated()
          + onCreateView()
          + onStart()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.LoginViewModel {
          {static} - TAG : String
          - currentFragId : int
          - password : MutableLiveData<String>
          - remember : MutableLiveData<Boolean>
          - username : MutableLiveData<String>
          + getCurrentFragId()
          + getPassword()
          + getRemember()
          + getUsername()
          + setCurrentFragId()
          + setPassword()
          + setRemember()
          + setUsername()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.ModifyPwdByCode {
          {static} - TAG : String
          - handler : Handler
          - preResult : String
          + getCaptcha()
          + modifyFailed()
          + modifyPwdByCode()
          + modifySuccess()
          {static} + newInstance()
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.RegisterFragment {
          {static} + newInstance()
          + onActivityCreated()
          + onCreateView()
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.login {
      class cn.cdut.a6pan.ui.login.RegisterViewModel {
      }
    }
  }
  

  cn.cdut.a6pan.ui.login.LoginByCodeFragment -up-|> androidx.fragment.app.Fragment
  cn.cdut.a6pan.ui.login.LoginByCodeFragment o-- cn.cdut.a6pan.databinding.LoginByCodeFragmentBinding : binding
  cn.cdut.a6pan.ui.login.LoginFragment -up-|> androidx.fragment.app.Fragment
  cn.cdut.a6pan.ui.login.LoginFragment o-- cn.cdut.a6pan.databinding.LoginFragmentBinding : binding
  cn.cdut.a6pan.ui.login.LoginFragment o-- cn.cdut.a6pan.ui.login.LoginViewModel : mViewModel
  cn.cdut.a6pan.ui.login.LoginIndexFragment -up-|> androidx.fragment.app.Fragment
  cn.cdut.a6pan.ui.login.LoginIndexFragment o-- cn.cdut.a6pan.ui.login.LoginViewModel : mViewModel
  cn.cdut.a6pan.ui.login.LoginViewModel -up-|> androidx.lifecycle.ViewModel
  cn.cdut.a6pan.ui.login.ModifyPwdByCode -up-|> androidx.fragment.app.Fragment
  cn.cdut.a6pan.ui.login.ModifyPwdByCode o-- cn.cdut.a6pan.databinding.ModifyPwdByCodeFragmentBinding : binding
  cn.cdut.a6pan.ui.login.RegisterFragment -up-|> androidx.fragment.app.Fragment
  cn.cdut.a6pan.ui.login.RegisterFragment o-- cn.cdut.a6pan.ui.login.RegisterViewModel : mViewModel
  cn.cdut.a6pan.ui.login.RegisterViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
